<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_mainTitle"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_title"
            android:textColor="#00C6FF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_text1"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tv_report1" />

        <ImageView
            android:id="@+id/iv_gen1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/genome"
            android:contentDescription="@string/gen1desc" />

        <TextView
            android:id="@+id/tv_captiongen1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            style="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/caption_gen1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/mapwuhan"
            android:contentDescription="@string/map1desc" />

        <TextView
            android:id="@+id/tv_captionmap1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/caption_map1" />

        <TextView
            android:id="@+id/tv_title2"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/tv_title2"
            android:textColor="#00C6FF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_text2"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tv_report2" />

        <ImageView
            android:id="@+id/iv_gen2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/genome2"
            android:contentDescription="@string/gen2desc" />

        <TextView
            android:id="@+id/tv_captiongen2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/caption_gen2" />

        <TextView
            android:id="@+id/tv_title3"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/tv_title3"
            android:textColor="#00C6FF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_text3"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tv_report3" />

        <ImageView
            android:id="@+id/iv_gen3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/genome3"
            android:contentDescription="@string/gen3desc" />

        <TextView
            android:id="@+id/tv_captiongen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/caption_gen3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mapgenome"
            android:contentDescription="@string/map2desc" />

        <TextView
            android:id="@+id/tv_captionmap2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/caption_map2" />

        <com.anychart.AnyChartView
            android:id="@+id/area_chart"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp" />
    </LinearLayout>
</ScrollView>