<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/tv_appTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_logo"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:background="@drawable/background"
            android:id="@+id/edit_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTitle"
                android:textAlignment="center"
                android:textColor="#00C6FF"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editHint"
                android:textAlignment="center"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edt_fullnameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/nameEditHint" />

            <EditText
                android:id="@+id/edt_usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/usernameEditHint" />

            <EditText
                android:id="@+id/edt_emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/emailEditHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit your role here"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/r_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_adminEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/rbadmin"
                    android:textSize="20sp"
                    android:typeface="serif" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_userEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/rbuser"
                    android:textSize="20sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_editConfirmed"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="48dp"
                android:text="@string/confirm_edit"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>